<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/created_on"
                android:textColor="@color/dark_gray"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/openedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/opened_29_oct_2019"
                android:textColor="@color/dark_gray"
                android:textSize="13dp" />
        </LinearLayout>

        <com.rey.material.widget.Button
            android:id="@+id/btnOpen"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_shape"
            android:fontFamily="sans-serif-medium"
            android:text="@string/open"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <LinearLayout
            android:id="@+id/linearBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnOpen"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/compilation_error_building_an_ios_simulator_fatal_error_could_not_build_module_foundation_43713"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearBody"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/message" />

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/_55_comments"
                android:textColor="@color/dark_gray"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/comments"
                android:textColor="@color/dark_gray"
                android:textSize="13dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/urlTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>