<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".controller.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/today"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateTodayTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:padding="5dp"
                    android:text="@string/tuesday_21_november"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@color/white"
                android:src="@drawable/settings"
                android:onClick="showInfoPopup"
                />

            <EditText
                android:id="@+id/searchSV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeLayout"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_tv"
                android:drawableStart="@drawable/search_icon"
                android:hint="@string/search_title_name"
                android:textColorHint="@color/dark_gray"
                android:textColor="@color/dark_gray"
                android:padding="10dp"
                android:textCursorDrawable="@drawable/color_cursor" />

            <LinearLayout
                android:id="@+id/horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchSV"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:onClick="showDatePopup"
                    android:text="@string/date"
                    android:textColor="@color/new_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:onClick="showComPopup"
                    android:text="@string/comments2"
                    android:textColor="@color/new_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/noVal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    >
                    <TextView
                        android:id="@+id/welcomeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/welcome"
                        android:textColor="@color/new_blue"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/infoTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/welcomeTV"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/to_view_list_of_issues_from_your_github_please_insert_your_details_by_clicking_the_button_below"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />
                    <com.rey.material.widget.Button
                        android:id="@+id/detailsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/infoTV"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_shape_two"
                        android:text="@string/github_info"
                        android:textColor="@color/white"
                        android:padding="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:onClick="showInfoPopup"
                        />
                </RelativeLayout>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <RelativeLayout
                android:id="@+id/noNet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    >
                    <TextView
                        android:id="@+id/TitleTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/no_internet_connection"
                        android:textColor="@color/new_blue"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/infoTVV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/TitleTV"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/please_check_your_internet_connectivity_then_refresh"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />
                    <com.rey.material.widget.Button
                        android:id="@+id/refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/infoTVV"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_shape_two"
                        android:text="@string/refresh"
                        android:textColor="@color/white"
                        android:padding="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:onClick="showInfoPopup"
                        />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/disconnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/no_internet_connection"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone"
                />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>